@@ -31,15 +31,15 @@
   (let ((paths '("/usr/local/share/guile/site"
                  "/usr/local/share/guile/1.6"
                  "/usr/local/share/guile")))
-    (if (not (member (car paths %load-path)))
+    (if (not (member (car paths) %load-path))
         (set! %load-path (append paths %load-path)))))
 
 (define (ld-library-path-prepend! path)
   (let ((ld-library-path (getenv "LD_LIBRARY_PATH")))
-    (if (string-null? ld-library-path)
-        (setenv "LD_LIBRARY_PATH" path)
+    (if ld-library-path
         (setenv "LD_LIBRARY_PATH" (format #f "~A:~A"
-                                          path ld-library-path)))))
+                                          path ld-library-path))
+        (setenv "LD_LIBRARY_PATH" path))))
 
 (define version "@API_VERSION@")
 
